@@ -15,7 +15,7 @@
 #include <stdlib.h>
  
 char array1[] = "Foo" "bar";                              /* Cumple con la regla STR36-C STR11-C */ //no se le pasa el ultimo byte porque se ha declarado entero
-char array2[7] = { 'F', 'o', 'o', 'b', 'a', 'r', '\0' };   /* Cumple con la regla STR36-C STR11-C */ //Se le pasa el ultimo byte porque se ha declarado letra a letra
+char array2[7] = { 'F', 'o', 'o', 'b', 'a', 'r', '\0' };   //Es un array de caracteres, no un string ??
  
 enum { BUFFER_MAX_SIZE = 1024 };
  
@@ -65,14 +65,22 @@ void get_y_or_n(void) {
  
 int main(int argc, char *argv[])
 {
-    char key[24];
+    //Aseguramos que se introduzcan los argumentos de ejecucion necesarios
+    if(argc != 3){
+      fprintf(stderr, "Error in function gets_example_func\n");
+      return -1;
+    }
+
+
+    char key[24];         //???? se reserva la memoria si se va a anyadir?? STR07-C
     char response[8];
     char array3[16];
     char array4[16];
-    char array5 []  = "01234567890123456";
-    char *ptr_char  = "new string literal";
-    int size_array1 = strlen("аналитик");
-    int size_array2 = 100;
+    char array5 []  = "01234567890123456"; //STR11-C-EX2, si luego quiero meterle mas que el tring literal debo ponerle limites [loquesea]
+    char *ptr_char  = "new string literal"; //incumple la MEM32-C
+    printf("%ld\n", sizeof(ptr_char));
+    size_t size_array1 = strlen("аналитик"); //cambiado int por size_t
+    size_t size_array2 = 100; //cambiado int por size_t
 
     
    // char analitic1[size_array1]="аналитик";
@@ -80,23 +88,28 @@ int main(int argc, char *argv[])
     char analitic3[100]="аналитик";
 
     puts(get_dirname(__FILE__));
+    
+    //if (strlen(argv[1])>24) argv[1][24] = '\0'; //se trunca si supera el tamano de key
 
-        
-    strcpy(key, argv[1]);  
-    strcat(key, " = ");  
+    strcpy(key, argv[1]);
+    printf("%s\n", key);  
+    strcat(key, " = ");
+    printf("%s\n", key);  
     strcat(key, argv[2]);
-    //antes de aqui salta core
+    printf("%s\n", key);
+
 
     fgets(response,sizeof(response),stdin);
-    
-    get_y_or_n();
+
+    printf("%s\n", response);
+    get_y_or_n(); //por que si metes mas de 8 caracteres que corresponden al "response" te coge la respuesta?
 
     printf ("%s",array1);
     printf ("\n");
     printf ("%s",array2);
     printf ("\n");
  
-    puts (s1);
+    puts (s1);        //puts anyade una nueva linea, que es mas correcto??
     printf ("\n");
     puts (s2);
     printf ("\n");
@@ -105,7 +118,7 @@ int main(int argc, char *argv[])
     strncpy(array4, array3, strlen(array3));
     
     array5 [0] = 'M';
-    ptr_char [0] = 'N';
+    ptr_char [0] = 'N'; //si no se libera el espacio, salta core
     
     array3[sizeof(array3)-1]='\0';
     
